--- a/eng/css/style.css
+++ b/eng/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(https://images.unsplash.com/photo-1491592558635-f4cc68beb2e9?auto=format&fit=crop&w=966&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D) no-repeat center center fixed;
+    background: url(https://images.unsplash.com/photo-1491592558635-f4cc68beb2e9?auto=format&fit=crop&w=966&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D) no-repeat center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
